# openmarker

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md
.claude/skills/openmarker-nesting/: SKILL.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
docs/: dev-setup.md
docs/planning/: ARCHITECTURE_NOTES.md  BACKLOG.md  IMPLEMENTATION_PLAN.md  PERFORMANCE.md
docs/superpowers/notes/: 2026-06-07-jagua-schema.md
docs/superpowers/plans/: 2026-04-25-phase4-manual-editing.md  2026-05-16-phase5-auto-layout.md  2026-05-16-pre-phase5-fixes.md  2026-05-18-phase5-auto-layout-optimization.md  2026-05-23-phase6-fixes-perf-ui.md  2026-05-25-blf-branch-pruning.md  2026-05-25-blf-parallel-pruning.md  2026-05-25-identical-piece-clustering.md  2026-05-26-true-union-polygon-clusters.md  2026-05-30-partial-clustering.md  2026-06-04-bench-grain-fix.md  (+14 more)
engine/: requirements.txt
engine/api/: main.py
engine/tests/: bench_branch_pruning.py  bench_clustering.py  bench_ga.py  bench_ga_sweep.py  bench_nfp_cache.py  bench_optimizer_tiers.py  bench_optimizer_tiers_multi.py  bench_sa.py  bench_sa_sweep.py  bench_separation.py  bench_sparrow.py  helpers.py  spike_basin_hopping.py  spike_budget_curve.py  spike_ga_warmstart.py  spike_lattice_warmstart.py  spike_race_fork.py  spike_simd_rebuild.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: dev-engine.bat  dev-engine.sh  gen-icons.py  setup-engine.bat  setup-engine.sh
(+97 files in other folders)
