[package]
name = "openmarker"
version = "0.1.0"
description = "OpenMarker — Fabric Layout Tool"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
